[EFL][WK2] CSS3 Media Queries functionality is broken https://bugs.webkit.org/show_bug.cgi?id=95680

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-09-04
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

In WK2, WebProcess doesn't have access to ewk_view evas object.
Methods that get screen rect or screen depth either return incorrect value or crash.
This patch removes dependency to ewk_view evas object and relies on ecore_x_* functions
to get screen rectangle or color depth of the screen.

* platform/efl/EflScreenUtilities.cpp: removed unused getPixelDepth method definition
* platform/efl/EflScreenUtilities.h: removed unsused getPixelDepth method declaration
(WebCore):
* platform/efl/PlatformScreenEfl.cpp:
(WebCore):
(WebCore::screenHorizontalDPI):
(WebCore::screenVerticalDPI):
(WebCore::screenDepth):
(WebCore::screenDepthPerComponent):
(WebCore::screenIsMonochrome):
(WebCore::screenRect):

LayoutTests:

Unskipped passing CSS3 Media Query tests.

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/113616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127463 268f45cc-cd09-0410-ab3c-d52691b4dbfc