Source/WebCore/platform/efl/EflScreenUtilities.h
@@ -27,7 +27,6 @@ namespace WebCore {
 
 void applyFallbackCursor(Ecore_Evas*, const char*);
 int getDPI();
-int getPixelDepth(const Evas*);
 bool isUsingEcoreX(const Evas*);
 
 } // namespace WebCore
