Source/WebCore/platform/efl/PlatformScreenEfl.cpp
@@ -5,6 +5,7 @@
  * Copyright (C) 2008 INdT - Instituto Nokia de Tecnologia
  * Copyright (C) 2009-2010 ProFUSION embedded systems
  * Copyright (C) 2009-2010 Samsung Electronics
+ * Copyright (C) 2012 Intel Corporation. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -34,7 +35,6 @@
 #include "config.h"
 #include "PlatformScreen.h"
 
-#include "EflScreenUtilities.h"
 #include "NotImplemented.h"
 #include "PlatformString.h"
 #include "Widget.h"
@@ -42,56 +42,89 @@
 #include <Ecore_Evas.h>
 #include <wtf/text/CString.h>
 
+#ifdef HAVE_ECORE_X
+#include <Ecore_X.h>
+#endif
+
 namespace WebCore {
- 
-int screenHorizontalDPI(Widget* widget)
+
+#ifdef HAVE_ECORE_X
+
+#define CALL_WITH_ECORE_X(ECORE_X_CALL)                                 \
+    do {                                                                \
+        int success = ecore_x_init(0);                                  \
+        if (success) {                                                  \
+            Ecore_X_Screen* screen = ecore_x_default_screen_get();      \
+            if (screen)                                                 \
+                ECORE_X_CALL;                                           \
+            ecore_x_shutdown();                                         \
+        }                                                               \
+    } while (0)                                                         \
+
+#endif
+
+int screenHorizontalDPI(Widget*)
 {
     notImplemented();
     return 0;
 }
 
-int screenVerticalDPI(Widget* widget)
+int screenVerticalDPI(Widget*)
 {
     notImplemented();
     return 0;
 }
 
-int screenDepth(Widget* widget)
+int screenDepth(Widget*)
 {
-    if (!widget || !widget->evas())
-        return 0;
-
-    return getPixelDepth(widget->evas());
+#ifdef HAVE_ECORE_X
+    int depth = 24;
+    CALL_WITH_ECORE_X(depth = ecore_x_default_depth_get(ecore_x_display_get(), screen));
+    return depth;
+#else
+    return 24;
+#endif
 }
 
 int screenDepthPerComponent(Widget* widget)
 {
-    if (!widget || !widget->evas())
-        return 0;
+    if (!widget)
+        return 8;
 
-    // FIXME: How to support this functionality based on EFL library ?
-    return getPixelDepth(widget->evas());
+    int depth = screenDepth(widget);
+
+    switch (depth) {
+    // Special treat 0 as an error, and return 8 bit per component.
+    case 0:
+    case 24:
+    case 32:
+        return 8;
+    case 8:
+        return 2;
+    default:
+        return depth / 3;
+    }
 }
 
-bool screenIsMonochrome(Widget*)
+bool screenIsMonochrome(Widget* widget)
 {
-    notImplemented();
-    return false;
+    return screenDepth(widget) < 2;
 }
 
 FloatRect screenRect(Widget* widget)
 {
-    if (!widget)
+#ifdef HAVE_ECORE_X
+    int width = 0, height = 0;
+    CALL_WITH_ECORE_X(ecore_x_screen_size_get(screen, &width, &height));
+    return FloatRect(0, 0, width, height);
+#else
+    if (!widget || !widget->evas())
         return FloatRect();
 
     int x, y, w, h;
-    Evas* e = widget->evas();
-    if (!e)
-        return FloatRect();
-
-    ecore_evas_screen_geometry_get(ecore_evas_ecore_evas_get(e), &x, &y, &w, &h);
-
+    ecore_evas_screen_geometry_get(ecore_evas_ecore_evas_get(widget->evas()), &x, &y, &w, &h);
     return FloatRect(x, y, w, h);
+#endif
 }
 
 FloatRect screenAvailableRect(Widget* widget)
